Enhance Docker Compose and backend service configurations: Updated JPA DDL auto setting to 'update' for development compatibility, added health checks for services, and improved service dependencies to ensure proper startup order. Introduced a backward-compatible alias in BudgetController for frontend compatibility and refined RedisStreamEventPublisher to handle unconfigured states gracefully. Enhanced simulation API service to align with backend expectations for request parameters.